--- a/src/app/Components/todos/todos.component.html
+++ b/src/app/Components/todos/todos.component.html
@@ -1,17 +1,42 @@
-<div>
-here is my title: {{title}}
+<!-- <div>
+here is my title: {{title}} -->
 <!-- {{metodeNavn}}
 <br>
 {{metodeNavn()}} -->
-<br>
-<button (click)="metodeNavn1()" >my button</button>
+<!-- <br>
+<button (click)="metodeNavn1()" >my button</button> -->
 
-<ul *ngFor="let item of todos">
+
+
+
+
+
+<!-- <ul *ngFor="let item of todos">
 <li>{{item.title}}</li>
 <p *ngIf="item.completed">sandt og title: {{item.title}}</p>
-<!-- prøv og lave en paragraph hvor den trækker id 1 ud -->
-</ul>
+ prøv og lave en paragraph hvor den trækker id 1 ud -->
+<!-- </ul> -->
+
+<app-todo-item *ngFor="let item of todos" [todoFromTodos]=item>
+
+
+</app-todo-item>
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- forløkke - parent cOMPONENT
+data / skrammel - egen Component (child) -->
+
 <!--
 {{1 + 1}}
 {{100 |currency}} -->
-</div>
+<!-- </div> -->
