--- a/src/app/Components/todo-item/todo-item.component.html
+++ b/src/app/Components/todo-item/todo-item.component.html
@@ -4,6 +4,7 @@
  <button (click)="deleteTodo(todoFromTodos)" class="btn" >x</button>
 
  <button class="todo123 is-completed">testing</button>
+ title: {{todoFromTodos.title}}
 </div>
 
 
