--- a/src/app/Components/todos/todos.component.html
+++ b/src/app/Components/todos/todos.component.html
@@ -19,9 +19,9 @@ here is my title: {{title}} -->
 
 <app-todo-item *ngFor="let item of todos" [todoFromTodos]=item>
 
-
 </app-todo-item>
 
+<!-- <button type="submit" (click)=submit()>post en genre</button> -->
 
 
 
