--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,12 @@
-hej test klaus
+<!-- hej test klaus
 <app-todos></app-todos>
-her kan jeg hygge mig som jeg har lyst ikke i index.html
+her kan jeg hygge mig som jeg har lyst ikke i index.html -->
+Vores menu skal være her
+<nav>
+ <a routerLink="sti" routerLinkActive="active" >todos</a> |
+ <a routerLink="genre" routerLinkActive="active" >Genre</a> |
+ <a routerLink="todos" routerLinkActive="active" >todos</a>
+</nav>
+<router-outlet></router-outlet>
+
+
